update bugreport link to new repo

--- a/general_website/templates/general_website/layout/nav_bottom.html
+++ b/general_website/templates/general_website/layout/nav_bottom.html
@@ -2,8 +2,8 @@
 {% load static %}
 <footer>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark bottom-nav">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarBottomMenu" aria-controls="navbarBottomMenu"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarBottomMenu"
+            aria-controls="navbarBottomMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarBottomMenu">
@@ -14,39 +14,39 @@
                 {% if not user.is_superuser %}
                 <li class="nav-item patron-link">
                     <a class="nav-link" href="https://www.patreon.com/bloodmallet">
-                    <svg class="svg-icon">
-                        <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#patreon"></use>
-                    </svg>
-                    <span style="color: #F96854;">{% translate "Patreon" %}</span>
+                        <svg class="svg-icon">
+                            <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#patreon"></use>
+                        </svg>
+                        <span style="color: #F96854;">{% translate "Patreon" %}</span>
                     </a>
                 </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/Bloodmallet/bloodmallet.github.io/issues">
-                    <svg class="svg-icon">
-                        <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#github"></use>
-                    </svg>
-                    <span>{% translate "Report an error" %}</span>
+                    <a class="nav-link" href="https://github.com/Bloodmallet/bloodmallet_web_frontend/issues">
+                        <svg class="svg-icon">
+                            <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#github"></use>
+                        </svg>
+                        <span>{% translate "Bugreport" %}/{% translate "Suggestion" %}</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://twitter.com/bloodmallet">
-                    <div class="svg-icon">
-                        <svg class="svg-icon">
-                        <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#twitter"></use>
-                        </svg>
-                    </div>
-                    <span>@bloodmallet</span>
+                        <div class="svg-icon">
+                            <svg class="svg-icon">
+                                <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#twitter"></use>
+                            </svg>
+                        </div>
+                        <span>@bloodmallet</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://discord.gg/sXfmMkm">
-                    <div class="svg-icon">
-                        <svg class="svg-icon">
-                        <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#discord"></use>
-                        </svg>
-                    </div>
-                    <span>bloodmallet</span>
+                        <div class="svg-icon">
+                            <svg class="svg-icon">
+                                <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#discord"></use>
+                            </svg>
+                        </div>
+                        <span>bloodmallet</span>
                     </a>
                 </li>
             </ul>
@@ -56,7 +56,8 @@
                     <a class="nav-link" href="{% url 'about' %}">{% translate "About" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'terms_and_conditions' %}">{% translate "Terms and Conditions" %}</a>
+                    <a class="nav-link"
+                        href="{% url 'terms_and_conditions' %}">{% translate "Terms and Conditions" %}</a>
                 </li>
                 {% comment %} <li class="nav-item">
                     <a class="nav-link" href="{% url 'privacy_policy' %}">{% translate "Privacy Policy" %}</a>
