--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -194,6 +194,18 @@
         <label class="form-check-label text-muted" for="absolute_values">{% translate "Use absolute values" %}</label>
     </div>
     <div id="chart_options" class="mt-3 row" hidden>
+        <div class="col-12 form-row">
+            <div class="col-auto">
+                <legend>Renown</legend>
+            </div>
+            <div class="col-1">
+                <select class="form-control form-control-sm">
+                    {% for i in "x"|ljust:"35" %}
+                    <option>{{ forloop.counter }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
         <div class="col-12 col-md-6">
             <legend>Chart mode</legend>
             <div class="form-check">
@@ -248,14 +260,18 @@
         <ul>
             <li>{% translate "Not all talent combinations might be equally supported by the APL." %}</li>
             <li>{% translate "Not all Fight styles might be supported equally." %}</li>
-            <li>{% translate "Secondary stats aren't changed during simulation, but some talents might favor a different distribution." %}
+            <li>{% translate "Secondary stats aren't changed during simulation, but some talents might favor a different
+                distribution." %}
             </li>
-            <li>{% translate "Different Covenants might synergize with talents differently, but aren't changed during simulation." %}
+            <li>{% translate "Different Covenants might synergize with talents differently, but aren't changed during
+                simulation." %}
             </li>
             <li>{% translate "Soulbinds might affect talents, but aren't changed during simulation." %}</li>
-            <li>{% translate "Legendaries might support specific talents. So consider your result legendary specific." %}
+            <li>{% translate "Legendaries might support specific talents. So consider your result legendary specific."
+                %}
             </li>
-            <li>{% translate "Conduits might affect the worth of talents. But yet again Conduits aren't changed during this simulation." %}
+            <li>{% translate "Conduits might affect the worth of talents. But yet again Conduits aren't changed during
+                this simulation." %}
             </li>
         </ul>
     </div>
