--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -199,10 +199,14 @@
             <div class="col-auto">
                 <legend>Renown</legend>
             </div>
-            <div class="col-1">
-                <select class="form-control form-control-sm">
+            <div class="col-1" style="min-width: 65px;">
+                <select class="form-control form-control-sm" id="renown">
                     {% for i in "x"|ljust:"35" %}
-                    <option>{{ forloop.counter }}</option>
+                    {% if forloop.counter == renown %}
+                    <option value="{{ forloop.counter }}" selected>{{ forloop.counter }}</option>
+                    {% else %}
+                    <option value="{{ forloop.counter }}">{{ forloop.counter }}</option>
+                    {% endif %}
                     {% endfor %}
                 </select>
             </div>
@@ -313,7 +317,7 @@
 <div id="chart" class="bloodmallet_chart mt-3" {% if general_result %} data-wow-class="{{ wow_class }}"
     data-wow-spec="{{ wow_spec }}" data-fight-style="{{ fight_style }}" data-type="{{ simulation_type }}" {% else %}
     data-chart-id="{{ chart_id }}" {% endif %} data-language="{{ LANGUAGE_CODE }}" data-entries="10000"
-    data-background-color="transparent" data-value-style="relative"></div>
+    data-background-color="transparent" data-value-style="relative" data-renown="{{ renown }}"></div>
 
 <div id="post_chart" class="mt-5" hidden></div>
 
@@ -329,9 +333,12 @@
 {% include 'general_website/layout/chart_import.html' %}
 
 <script>
+    function get_chart() {
+        return document.getElementById("chart");
+    }
     function update_value_style() {
         const element = document.getElementById("absolute_values");
-        let chart = document.getElementById("chart");
+        let chart = get_chart();
         if (element.checked) {
             chart.dataset.valueStyle = "absolute";
         } else {
@@ -345,7 +352,7 @@
         document.getElementsByName("chart_mode").forEach(element => {
             if (element.checked) {
                 document.getElementById("covenant_selection").hidden = element.value === "soulbinds";
-                document.getElementById("chart").dataset.chartMode = element.value;
+                get_chart().dataset.chartMode = element.value;
                 bloodmallet_chart_import();
             }
         });
@@ -353,10 +360,15 @@
     function update_covenant() {
         document.getElementsByName("covenant_selection").forEach(element => {
             if (element.checked) {
-                document.getElementById("chart").dataset.covenant = element.value;
+                get_chart().dataset.covenant = element.value;
                 bloodmallet_chart_import();
             }
         });
+    }
+    function update_renown() {
+        let renown = document.getElementById("renown").value;
+        get_chart().dataset.renown = renown;
+        bloodmallet_chart_import();
     }
     {% endif %}
     document.addEventListener("DOMContentLoaded", function () {
@@ -369,6 +381,7 @@
         document.getElementsByName("covenant_selection").forEach(element => {
             element.addEventListener("change", update_covenant);
         });
+        document.getElementById("renown").addEventListener("change", update_renown);
         {% endif %}
     });
 </script>
