remove more 60px spacers

--- a/general_website/templates/general_website/layout/nav_top.html
+++ b/general_website/templates/general_website/layout/nav_top.html
@@ -4,12 +4,13 @@
 {% comment %} <header> {% endcomment %}
     <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark top-nav light-border-bottom">
         <a class="navbar-brand" href="{% url 'index' %}">
-            <img src="{% static 'general_website/assets/bloodmallet.svg' %}" style="width: 35px; vertical-align:top;" /> <span id="brand-name" style="font-weight:300;">bloodmallet</span>
+            <img src="{% static 'general_website/assets/bloodmallet.svg' %}" style="width: 35px; vertical-align:top;" />
+            <span id="brand-name" style="font-weight:300;">bloodmallet</span>
             <!-- <img src="{% static 'general_website/assets/bloodmallet_logo.svg' %}" style="width: 35px; vertical-align:top;" /> <span id="brand-name" style="font-weight:300;">bloodmallet</span> -->
         </a>
         <!-- Menu button if device is too small for full menu -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTopMenu" aria-controls="navbarTopMenu"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTopMenu"
+            aria-controls="navbarTopMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Menu list -->
@@ -17,9 +18,11 @@
 
             <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'my_charts' %}" id="my_charts_link">{% translate "My Charts" %}</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'my_charts' %}" id="my_charts_link">
+                        {% translate "My Charts" %}
+                    </a>
+                </li>
                 {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'tears' %}">{% translate "Meme" %}</a>
@@ -30,19 +33,32 @@
             <!-- Settings -->
             <ul class="navbar-nav ml-auto">
                 {% if not request.user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'login' %}" id="navbarLogin">{% translate "Login" %}</a>
-                    <a class="nav-link" href="{% url 'signup' %}" id="navbarSignup">{% translate "Register" %}</a>
+                <a class="nav-link" href="{% url 'login' %}" id="navbarLogin">
+                    {% translate "Login" %}
+                </a>
+                <a class="nav-link" href="{% url 'signup' %}" id="navbarSignup">
+                    {% translate "Register" %}
+                </a>
                 {% endif %}
                 {% if request.user.is_authenticated and request.user.is_superuser %}
-                    <a class="nav-link" href="{% url 'compute_api:index' %}" id="navbarSuperuser">{% translate "Superuser" %}</a>
-                    <a class="nav-link" href="{% url 'admin:index' %}" id="navbarAdmin">{% translate "Admin" %}</a>
+                <a class="nav-link" href="{% url 'compute_api:index' %}" id="navbarSuperuser">
+                    {% translate "Superuser" %}
+                </a>
+                <a class="nav-link" href="{% url 'admin:index' %}" id="navbarAdmin">
+                    {% translate "Admin" %}
+                </a>
                 {% endif%}
-                <a class="nav-link" href="{% url 'settings' %}" id="navbarLogin">{% translate "Settings" %}</a>
+                <a class="nav-link" href="{% url 'settings' %}" id="navbarLogin">
+                    {% translate "Settings" %}
+                </a>
                 {% if request.user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'logout' %}" id="navbarLogin">{% translate "Logout" %}</a>
+                <a class="nav-link" href="{% url 'logout' %}" id="navbarLogin">
+                    {% translate "Logout" %}
+                </a>
                 {% endif %}
             </ul>
         </div>
     </nav>
 
-{% comment %} </header> {% endcomment %}
+    {% comment %}
+</header> {% endcomment %}
