add a bug report faq entry

--- a/general_website/templates/general_website/faq.html
+++ b/general_website/templates/general_website/faq.html
@@ -176,5 +176,15 @@
             </li>
         </ul>
     </div>
+    <div class="offset-md-1 col-md-10 mt-5">
+        <h2 id="bugreports" class="faq-question">How do I report a bug?</h2>
+        <ul type="square">
+            <li>
+                Create a ticket on Github <a
+                    href="https://github.com/Bloodmallet/bloodmallet_web_frontend/issues">bloodmallet_web_frontend</a>
+            </li>
+        </ul>
+    </div>
+
 </div>
 {% endblock %}
