remove additional to pspacing from headling

--- a/general_website/templates/general_website/index.html
+++ b/general_website/templates/general_website/index.html
@@ -6,14 +6,15 @@
 
 {% block content %}
 
-<h1 class="display-4 mt-3 mb-3 text-center" id="primary_headline">bloodmallet</h1>
+<h1 class="display-4 mb-3 text-center" id="primary_headline">bloodmallet</h1>
 
 <p>
     {% blocktranslate %}
     This site provides an overview about several simulateable aspects for almost all specs in World of Warcraft
     using <a href="http://www.simulationcraft.org/">SimulationCraft</a>. These overviews
     are an entry point.
-    <span class="monk-color">You can generate your own charts by becoming a <a href="https://www.patreon.com/bloodmallet">Patreon</a>.</span>
+    <span class="monk-color">You can generate your own charts by becoming a <a
+            href="https://www.patreon.com/bloodmallet">Patreon</a>.</span>
     {% endblocktranslate %}
 </p>
 <p>
