--- a/general_website/templates/general_website/layout/nav_bottom.html
+++ b/general_website/templates/general_website/layout/nav_bottom.html
@@ -23,7 +23,7 @@
                         <svg class="svg-icon">
                             <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#github"></use>
                         </svg>
-                        <span>{% translate "Bugreport" %}/{% translate "Suggestion" %}</span>
+                        <span>{% translate "Bugreport" %}</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -33,7 +33,7 @@
                                 <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#twitter"></use>
                             </svg>
                         </div>
-                        <span>@bloodmallet</span>
+                        <span>Twitter</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -43,7 +43,7 @@
                                 <use xlink:href="{% static 'general_website/assets/social-icons.svg' %}#discord"></use>
                             </svg>
                         </div>
-                        <span>bloodmallet</span>
+                        <span>Discord</span>
                     </a>
                 </li>
             </ul>
