--- a/general_website/templates/general_website/layout/nav_top.html
+++ b/general_website/templates/general_website/layout/nav_top.html
@@ -24,9 +24,9 @@
                     </a>
                 </li>
                 {% endif %}
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'tears' %}">{% translate "Meme" %}</a>
-                </li>
+                </li> -->
             </ul>
 
 
