--- a/general_website/templates/general_website/faq.html
+++ b/general_website/templates/general_website/faq.html
@@ -47,8 +47,8 @@
             <tbody>
                 <tr>
                     <th scope="row">Profile/Tier</th>
-                    <td>T27 (Sanctum of Domination)</td>
-                    <td>T27 (Sanctum of Domination)</td>
+                    <td>T28 (Sepulcher of the First Ones)</td>
+                    <td>T28 (Sepulcher of the First Ones)</td>
                 </tr>
                 <tr>
                     <th scope="row">Iterations</th>
@@ -128,29 +128,13 @@
             </button>
         </div>
     </div>
-
-    <div class="offset-md-1 col-md-10 mt-5">
-        <h2 id="contributors" class="faq-question">Who contributed?</h2>
-        <p>A big shout out to everyone who took part in the journey to reach this point. Without your feedback
-            bloodmallet.com wouldn't be as smooth as it is. All feedback is highly appreciated, so share your opinion on
-            Twitter <a href="https://twitter.com/bloodmallet">@bloodmallet</a>! Special mentions go to:
-        </p>
-        <ul type="square">
-            <li>
-                <a href="https://github.com/bhalial">bhalial</a> for creating the logo
-            </li>
-            <li>
-                <a href="https://github.com/HawkCorrigan">HawkCorrigan</a> for double-checking js code
-            </li>
-        </ul>
-    </div>
     <div class="offset-md-1 col-md-10 mt-5">
         <h2 id="data-usage" class="faq-question">Can I use the charts/data from bloodmallet.com?</h2>
         <p>Yes! Of course! All data is free to use for everyone. Just one suggestion: Don't take screenshots from charts
             to show data. Screenshots tend to quickly become outdated. Instead have a look at this <a
-                href="https://github.com/Bloodmallet/bloodmallet_web_frontend/wiki/How-to-import-charts">chart
-                importer</a>. With this you can very easily add any chart you want to your page directly and always get
-            the most up to date information. A shoutout to where you get the data from and some support would be
+                href="https://github.com/Bloodmallet/bloodmallet_web_frontend/wiki/How-to-import-charts">guide on how to
+                import charts</a>. With this you can very easily add any chart you want to your page directly and always
+            get the most up to date information. A shoutout to where you get the data from and some support would be
             appreciated. Or: Link directly to
             <code>bloodmallet.com/chart/shaman/elemental/trinkets/castingpatchwerk</code> and let your
             users explore charts here.
@@ -180,8 +164,7 @@
         <h2 id="bugreports" class="faq-question">How do I report a bug?</h2>
         <ul type="square">
             <li>
-                Create a ticket on Github <a
-                    href="https://github.com/Bloodmallet/bloodmallet_web_frontend/issues">bloodmallet_web_frontend</a>
+                Create a ticket on <a href="https://github.com/Bloodmallet/bloodmallet_web_frontend/issues">Github</a>
             </li>
         </ul>
     </div>
